ServerRecording/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: recording-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - host: recording.akscluster.sdvgm.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: recording-service
            port:
              number: 80
